// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text> Props should use maxChars and the default EllipsisType 1`] = `
<span
  ariaLabel="introduced manner nodded rising sentence tube establish board garage each lose particularly"
>
  introduced...
</span>
`;

exports[`<Text> Props should use maxChars and the defined EllipsisType 1`] = `
<span
  ariaLabel="introduced manner nodded rising sentence tube establish board garage each lose particularly"
>
  ...rticularly
</span>
`;

exports[`<Text> Snapshots and structure should render defaults 1`] = `
<span>
  bound
</span>
`;
